feat: adiciona endpoint /populate
- Adiciona inserts-bank-api.sql, controller e endpoint /populate para popular o banco de dados
- Adiciona endpoint em CustomerController para buscar dados do cliente logado na aplicação
- refactor: melhora o tratamento de exceções

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ api.security.token.secret=${JWT_SECRET:12345678}
 
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=alpha
+
+spring.profiles.active=dev
